Replace YouTube suggestions with auto-loop playlist for stability
CRITICAL FIX - Bot no longer stuck when queue finishes:

NEW BEHAVIOR (DEFAULT):
- Queue finishes  Auto-restart from beginning
- Playlist loops forever until manual stop
- No network calls = No hang = 100% stable
- Perfect for continuous playback

OPTIONAL YouTube Suggestions:
- Disabled by default (ENABLE_YOUTUBE_SUGGESTIONS=false)
- Can be enabled via .env if needed
- Added detailed logging for debugging
- Proper timeout and error handling

Changes:
- Add ENABLE_YOUTUBE_SUGGESTIONS config option
- Auto-loop playlist when queue finishes (default)
- Better logging in show_suggestions_dialog
- Update .env.example with new option
- Bot stays responsive during playlist end

Use case:
- Single song  loops that song
- Playlist  loops entire playlist
- No more stuck/freeze issues!

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DEFAULT_VOLUME=75
 
 # Optional: Enable debug logging (true/false)
 DEBUG=false
+
+# Optional: Enable YouTube suggestions when queue finishes (true/false)
+# Default: false (uses auto-loop playlist instead for better stability)
+ENABLE_YOUTUBE_SUGGESTIONS=false
