Add YouTube Suggestions toggle and searching notification

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,6 @@ DEFAULT_VOLUME=75
 DEBUG=false
 
 # Optional: Enable YouTube suggestions when queue finishes (true/false)
-# Default: false (uses auto-loop playlist instead for better stability)
-ENABLE_YOUTUBE_SUGGESTIONS=false
+# Default: true (fetches YouTube related videos when playlist ends)
+# Set to false to use auto-loop playlist instead
+ENABLE_YOUTUBE_SUGGESTIONS=true
