--- a/ytmusic_bot.service
+++ b/ytmusic_bot.service
@@ -1,14 +1,18 @@
 [Unit]
-Description=YouTube Music Telegram Bot
+Description=Play YouTube in CLI Bot
 After=network.target
 
 [Service]
 Type=simple
-User=ubuntu
-WorkingDirectory=/home/ubuntu/Play-Youtube-In-CLI
-ExecStart=/home/ubuntu/Play-Youtube-In-CLI/venv/bin/python /home/ubuntu/Play-Youtube-In-CLI/main.py
+User=jhopan
+Group=jhopan
+WorkingDirectory=/home/jhopan/Play-Youtube-In-CLI
+ExecStart=/home/jhopan/Play-Youtube-In-CLI/venv/bin/python /home/jhopan/Play-Youtube-In-CLI/main.py
 Restart=always
 RestartSec=10
+
+# Environment
+Environment="PYTHONUNBUFFERED=1"
 
 # Logging
 StandardOutput=journal
