Bot anti-mati: auto-reconnect saat internet putus
- Service: Added network-online.target untuk tunggu internet stabil
- Service: Restart=always dengan RestartSec=5 untuk restart cepat
- Service: Sesuaikan dengan config server (User=root, log ke file)
- main.py: Infinite retry loop - bot tidak akan mati
- main.py: Auto-reconnect setiap 10 detik saat network error
- main.py: Timeout settings lebih panjang (30s) untuk koneksi tidak stabil
- main.py: Deteksi network error dan retry otomatis
- Bot akan terus hidup sampai di-stop manual dengan systemctl stop

--- a/ytmusic_bot.service
+++ b/ytmusic_bot.service
@@ -1,23 +1,24 @@
 [Unit]
 Description=Play YouTube in CLI Bot
-After=network.target
+After=network.target network-online.target
+Wants=network-online.target
 
 [Service]
-Type=simple
-User=jhopan
-Group=jhopan
-WorkingDirectory=/home/jhopan/Play-Youtube-In-CLI
+# Jalankan Python dari virtual environment
 ExecStart=/home/jhopan/Play-Youtube-In-CLI/venv/bin/python /home/jhopan/Play-Youtube-In-CLI/main.py
+WorkingDirectory=/home/jhopan/Play-Youtube-In-CLI
+
+# Jalankan sebagai root (akses penuh)
+User=root
+Group=root
+
+# Restart otomatis kalau crash
 Restart=always
-RestartSec=10
+RestartSec=5
 
-# Environment
-Environment="PYTHONUNBUFFERED=1"
-
-# Logging
-StandardOutput=journal
-StandardError=journal
-SyslogIdentifier=ytmusic_bot
+# Simpan log
+StandardOutput=append:/home/jhopan/Play-Youtube-In-CLI/log.txt
+StandardError=append:/home/jhopan/Play-Youtube-In-CLI/error.log
 
 [Install]
 WantedBy=multi-user.target
